<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="50dp"
    android:background="#E60404"
    tools:context=".SecondActivity">
    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text2"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_margin="40dp"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:textColor="#FFFEFE"

        />

    <EditText
        android:id="@+id/editId3"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:hint="@string/edit1"
        android:textSize="20dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:background="#FFFFFF"
        android:textColor="#E60404"
        android:textColorHint="#E60404"


        />

    <EditText
        android:id="@+id/editId4"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:hint="@string/edit2"
        android:textSize="20dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:layout_marginTop="20dp"
        android:background="#FFFFFF"
        android:textColor="#E60404"
        android:textColorHint="#E60404"

        />

    <EditText
        android:id="@+id/editId5"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:hint="@string/edit3"
        android:textSize="20dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:layout_marginTop="20dp"
        android:background="#FFFFFF"
        android:textColor="#E60404"
        android:textColorHint="#E60404"

        />

    <EditText
        android:id="@+id/editId6"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:hint="@string/edit4"
        android:textSize="20dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:layout_marginTop="20dp"
        android:background="#FFFFFF"
        android:textColor="#E60404"
        android:textColorHint="#E60404"

        />
    <EditText
        android:id="@+id/editId7"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:hint="@string/edit5"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:layout_marginTop="20dp"
        android:background="#FFFFFF"
        android:textColor="#E60404"
        android:textColorHint="#E60404"

        />

    <Button
        android:id="@+id/signupbuttonId1"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:text="@string/signupbutton"
        android:textSize="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_marginTop="20dp"
        android:background="#880505"
        android:textColor="#FFFFFF"

        />













</LinearLayout>