<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#E60404"

    tools:context=".MainActivity">

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text1"
        android:textSize="30dp"
        android:textStyle="bold"
        android:layout_margin="70dp"
        android:textColor="#FFFFFF"
        android:textAlignment="center"
        android:layout_gravity="center"

        />


    <EditText
        android:id="@+id/editId1"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/edit1"
        android:textAlignment="center"
        android:paddingLeft="25dp"
        android:paddingRight="40dp"
        android:textSize="25dp"
        android:background="#FFFFFF"
        android:textColor="#E60404"
        android:textColorHint="#E60404"

        />

    <EditText
        android:id="@+id/editId2"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/edit2"
        android:textSize="25dp"
        android:textAlignment="center"
        android:paddingLeft="25dp"
        android:paddingRight="40dp"
        android:layout_marginTop="20dp"
        android:background="#FFFFFF"
        android:textColor="#E60404"
        android:textColorHint="#E60404"

        />
    <Button
        android:id="@+id/loginbuttonId"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/loginbutton"
        android:textSize="20dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:layout_marginTop="25dp"
        android:background="#880505"
        android:textColor="#FFFFFF"

        />

   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="Don't have an account ?"
       android:textColor="#FFFFFF"
       android:layout_gravity="center"
       android:layout_marginTop="20dp"
       android:textSize="15dp"
       android:textStyle="bold"
       />

    <Button
        android:id="@+id/signupbuttonId"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/signupbutton"
        android:textSize="20dp"
        android:layout_gravity="center"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_marginTop="20dp"
        android:background="#880505"
        android:textColor="#FFFFFF"

        />










</LinearLayout>